--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Blogs</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+
+<header>
+    <div class="container1">
+        <a href="/" class="logo">
+            <img src="/static/img1.ico" alt="Mountain Traveller logo">
+            <span>Learn-O-Pedia</span>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="{{ url_for('posts') }}">Blog</a></li>
+                <li><a href="{{ url_for('contact') }}">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
     <div class="container mt-4">
         <h1 class="text-center">All Blogs</h1>
         <div class="row">
