--- a/templates/login.html
+++ b/templates/login.html
@@ -92,7 +92,7 @@
 
     <div class="login-container">
         <h2>User Login</h2>
-        <form action="{{ url_for('login_check') }}" method="POST">
+        <form action="{{ url_for('login') }}" method="POST">
             <div class="form-group">
                 <label for="email">Email Address</label>
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
